# nes-rust

./: .gitignore  Cargo.toml
benches/: bootup.rs  step-frame.rs
cli/: Cargo.toml
cli/src/: main.rs  sdl2_audio.rs  sdl2_display.rs  sdl2_input.rs
src/: apu.rs  audio.rs  button.rs  cpu.rs  default_audio.rs  default_display.rs  default_input.rs  display.rs  input.rs  joypad.rs  lib.rs  mapper.rs  memory.rs  ppu.rs  register.rs  rom.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
