[package]
name = "nes_rust"
version = "0.2.0"
description = "NES emulator written in Rust"
authors = ["Takahiro <hogehoge@gachapin.jp>"]
license = "MIT"
homepage = "https://github.com/takahirox/nes-rust"
repository = "https://github.com/takahirox/nes-rust"
exclude = ["resources/*", "screenshots/*", "roms/*", "cli/*", "wasm/*"]

[workspace]
members = [".", "cli", "wasm"]

[badges]
travis-ci = { repository = "takahirox/nes-rust" }

[dev-dependencies]
criterion = "0.5.1"
flamegraph = "0.6.7"

[features]
smol_bench = []
no_apu = []
no_render = []

[[bench]]
name = "bootup"
harness = false

[[bench]]
name = "step-frame"
harness = false
